# apps/api/src/modules/requests/requests.module.ts
@@ -1,6 +1,0 @@
-import { Module } from '@nestjs/common'
-import { RequestsController } from './requests.controller.js'
-import { RequestsService } from './requests.service.js'
-
-@Module({ controllers: [RequestsController], providers: [RequestsService], exports: [RequestsService] })
-export class RequestsModule {}
